--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="background.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet" />
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
