--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="background.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet" />
+    <link href="gallery/ancient-greece.png" rel="preload" as="image" />
     <script defer src="script.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
