preload fonts for reducing LCP

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="background.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet" />
     <link href="gallery/ancient-greece.png" rel="preload" as="image" />
+    <link
+      href="
+    https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyeAZ9hiJ-Ek-_EeA.woff2"
+      rel="preload"
+      as="fonts"
+    />
     <script defer src="script.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
