fix on font name for as attr in preload

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="
     https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyeAZ9hiJ-Ek-_EeA.woff2"
       rel="preload"
-      as="fonts"
+      as="font"
     />
     <script defer src="script.js"></script>
     <meta charset="UTF-8" />
