--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       as="font"
       crossorigin
     />
+
     <script defer src="script.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -28,7 +29,7 @@
         </p>
         <picture>
           <source srcset="gallery/ancient-greece.webp" type="image/webp" />
-          <img src="gallery/ancient-greece.png" fetchpriority="high" />
+          <img src="gallery/ancient-greece.png" fetchpriority="high" decoding="sync" />
         </picture>
       </article>
     </main>
