--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       as="font"
       crossorigin
     />
-
+    <link href="images/gradient.png" rel="preload" as="image" />
     <script defer src="script.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
